vlib/v/checker/tests/str_method_return_string.out
vlib/v/checker/tests/str_method_return_string.vv:5:1: error: .str() methods should return `string`
    3 | }
    4 | 
    5 | fn (z Zzz) str(x int) int {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~
    6 |     return z.x
    7 | }
vlib/v/checker/tests/str_method_return_string.vv:5:1: error: .str() methods should have 0 arguments
    3 | }
    4 | 
    5 | fn (z Zzz) str(x int) int {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~
    6 |     return z.x
    7 | }
