vlib/v/checker/tests/str_method_return_string.vv
struct Zzz {
	x int
}

fn (z Zzz) str(x int) int {
	return z.x
}

fn main() {
	println(Zzz{123})
}
